Closed Bug 1324626 Opened 7 years ago Closed 7 years ago

Failure in conformance2/sync/sync-webgl-specific.html

Categories

(Core :: Graphics: CanvasWebGL, defect, P1)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

Details

(Whiteboard: gfx-noted)

Attachments

(1 file)

      No description provided.
Comment on attachment 8820120 [details]
Bug 1324626 - Pick a MAX_CLIENT_WAIT_TIMEOUT_WEBGL. -

https://reviewboard.mozilla.org/r/99648/#review100040
Attachment #8820120 - Flags: review?(cleu) → review+
Pushed by jgilbert@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/793d4f83b98e
Pick a MAX_CLIENT_WAIT_TIMEOUT_WEBGL. - r=lenzak800
https://hg.mozilla.org/mozilla-central/rev/793d4f83b98e
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8820120 [details]
Bug 1324626 - Pick a MAX_CLIENT_WAIT_TIMEOUT_WEBGL. -

Approval Request Comment
[Feature/Bug causing the regression]: webgl2
[User impact if declined]:
[Is this code covered by automated tests?]:
[Has the fix been verified in Nightly?]:
[Needs manual test from QE? If yes, steps to reproduce]: 
[List of other uplifts needed for the feature/fix]:
[Is the change risky?]:
[Why is the change risky/not risky?]:
[String changes made/needed]:
Attachment #8820120 - Flags: approval-mozilla-beta?
Attachment #8820120 - Flags: approval-mozilla-aurora?
Comment on attachment 8820120 [details]
Bug 1324626 - Pick a MAX_CLIENT_WAIT_TIMEOUT_WEBGL. -

Fix WebGL2 related issue. Beta51+ & Aurora52+. Should be in 51 beta 10.
Attachment #8820120 - Flags: approval-mozilla-beta?
Attachment #8820120 - Flags: approval-mozilla-beta+
Attachment #8820120 - Flags: approval-mozilla-aurora?
Attachment #8820120 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: