Bug 1324626 - Pick a MAX_CLIENT_WAIT_TIMEOUT_WEBGL. - r=lenzak800

MozReview-Commit-ID: L4gaasXZYFb